[package]
name = "compiler"
version = "0.1.0"
authors = ["Ishan Bhanuka <bhanuka.ishan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
snafu = "0"
regelexer_derive = { path = "regelexer_derive"}


# TODO : add default export for regelexer-derive crate
# [features]
# default = ["export_derive"]
# export_derive = ["logos-derive"]