[package]
name = "regelexer_derive"
version = "0.1.0"
authors = ["sampras lopes"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0", features=["extra-traits"]}
quote = "1.0"
